--- a/_posts/2021-11-23-era-of-soc.md
+++ b/_posts/2021-11-23-era-of-soc.md
@@ -21,7 +21,7 @@ Before the advent of integrated circuits, computers were bulky and heavy. One of
 |:--:|
 |*ENIAC: one of the earliest general purpose computer*|
 
-
+<br>
 But humanity did not stop there, with new generations of devices now using the then relatively new transistor. The use of transistor meant that vaccuum tubes could be replaced by them for control of electricity flow. This massive reduction in size meant that the dreams of smaller computers were finally achievable although it took a few more decades for that to be possible.
 
 The stepping stone towards personal computing was the introduction of integrated circuits, in which electronic circuits are embedded onto semiconductors. Integrated Circuits allowed a massive number of transistors to be embedded onto a single [die](https://en.wikipedia.org/wiki/Die_(integrated_circuit)). Indeed Microprocessors and SoCs are only possible due to integrated circuits forming the backbone of all modern chipsets.
@@ -38,7 +38,7 @@ However recently things have not gone very well for Intel. Intel had to face var
 |:--:|
 |*Recent [cache-based attacks](https://www.cse.iitb.ac.in/~biswa/courses/CS305/lectures/L43.pdf) on intel chips*|
 
-
+<br>
 While Intel was facing these issues, on the other end of the spectrum, in handheld devices, a rival ISA was becoming more and more powerful and popular. Dubbed ARM and spearhelded by ARM Limited, it had quickly become the dominent choice for handled and IoT devices. ARM chips used SoCs integrated with all the components. This was a necessity for smaller devices that did not have enough space like a conventional motherboard. But ARM was becoming more and more powerful and in the last few years, ARM has finally been able to catch up and in case of Apple M1, even beat Intel in many areas. The uprising of ARM and the SoC has been an interesting tale and in the following sections, we will look at how they have evolved over the years.
 
 ## What are SoC's? Why do we care?
@@ -51,7 +51,7 @@ The concept of an SoC which was first introduced during 1970's when the first LE
 |:--:|
 |*SoC Design Flow*|
 
-
+<br>
 By the late 1990's, ARM holdings began to license its processor designs to other markets and the popularity of the system rose. In 2001, the iPod released by Apple was based on a dual core SoC by ARM and the first iPhone back in 2007 was also based on this which contained an ARM core and a GPU. By now, SoC design is the mainstream design choice for all mobile phones and have been seeing remarkable breakthrough with the newer models.
 
 However, even with all this, why do we not see a similar situation for PC's? Why were PC's still using board based circuitry and why was there a resurgence in SoC design for PC's now? That is what we look at next.
@@ -90,6 +90,7 @@ In an [out of order](https://www.cse.iitb.ac.in/~biswa/courses/CS305/lectures/L2
 |:--:|
 |*Out of Order Execution, ref. [CS305: IITB](https://www.cse.iitb.ac.in/~biswa/courses/CS305/lectures/L42.pdf)*|
 
+<br>
 
 #### Executing the Many Instructions
 In the goal of improving the ILP of ARM based processors, we're off to a good start. We can now bring decoded instructions faster into our pipeline. But for this to be of any use, we also need components like ALUs that can handle these instructions.
@@ -111,10 +112,12 @@ You will be familiar with "x-core GPU y-core Neural Engine" advertising if you'v
 But this is not limited to SoCs. You've obviously played video games before and they do pretty much the same thing. A dedicated GPU is good at shading pixels, and doing lighting computation and such tasks. When you play a game, your CPU essentially asks your GPU to do these tasks for you. Except they have different memory and communicate via a PCI-e bus and the data used by the GPU needs to be first transferred from the RAM to the GPU memory, and the RAM bandwith is usually no match for the humongous amount of data a GPU operates parallely on and may end up being a bottleneck in your system's performance.
 
 A SoC deals with this problem very simply. There are no seperate memories, no bus on which data needs to be transferred. Instead, memory is _unified_. Therefore the blob of memory running all around the chip 
-|![sdf](https://i.imgur.com/W0vEnfF.png)|
+
+|![](https://i.imgur.com/W0vEnfF.png)|
 |:--:|
 |*Apple's Unified Memory design*|
 
+<br>
 is not the cores' property but is shared by the cores, the GPU, the NPU and any other little components that may need it. And therefore there is no need of duplication into GPU's memory when a core wants it to compute, say, lighting of a scene. Instead the core can just point the GPU to it. Apart from the GPU and the NPU, an SoC also brings the I/O controllers, the network card and all the other pieces that modern computing utilizes closer to the CPU. And eliminating the use of long common buses means _speed_.
 
 But does unified memory deal with the problem effectively ? We've already dealt with the latency issue. But a GPU or a NPU (which optimizes computing vector operations like convolutions) would need access to high bandwidth memory. And in fact, increasing the bandwith is easier when you do not have to use a common bus to transfer your data. You just have to "throw some money into it", which you would do in a split second after this long a discussion.
@@ -130,3 +133,5 @@ Because, frankly, they are not diverse enough to build them. Take the example of
 After all this collaboration, if company X's component on the SoC fails, it will hinder sales for every other company. Ah yes, I can smell giant tech lawsuits in distance. And even if these companies ended up making a working product without getting at each other's throats, Apple still has the first mover's advantage.
 
 Apple pulled this off because they design and manufacture their own hardware and their own OS. Turns out their frowned upon policy of "end-to-end control" has actually paid off. Perhaps Steve Jobs was a man well ahead of his time.
+
+_This blog post was written as part of CS305 by Team Atlanna's Quindent_
